--- a/demo1/templates/demo1/listados/listado_combi.html
+++ b/demo1/templates/demo1/listados/listado_combi.html
@@ -1,10 +1,14 @@
 {% extends 'demo1/base.html' %}
-
+{% load static %}
 {% block content %}
 <div class="card">
     <h2>Listado de Combis</h2>  
 </div>
     <div class="card">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+    <script src="{% static 'js/nuevojavascript.js' %}"></script>
     <table class="tablalista" width=100% border="1">
         <tbody>
         {% if cantidad %}
@@ -19,14 +23,12 @@
                     <td>{{c.modelo}}</td>
                     <td>{{c.patente }}</td>
                     <td>{{c.chofer }}</td>
-                    <td> 
-                        <a href="{% url 'detalle_combi' pk=c.pk%}">Detalle</a></td>
-                    <td> 
-                        <a href="{% url 'eliminar_combi' pk=c.pk%}">Eliminar</a></td>
-                    <td>
-                        
-                        <a href="{% url 'modificar_combi' pk=c.pk%}">Modificar</a>
-                       
+                    <td align="center"> 
+                        <button><a href="{% url 'detalle_combi' pk=c.pk%}" style="text-decoration:none; color: black;">Detalle</a></button></td>
+                    <td align="center"> 
+                        <button onclick="confirmarEliminacion('{% url 'eliminar_combi' pk=c.pk%}', 'Esta seguro que desea eliminar la combi?' )" style="color: black;">Eliminar</button></td>
+                    <td align="center">
+                        <button><a href="{% url 'modificar_combi' pk=c.pk%}" style="text-decoration:none; color: black;">Modificar</a></button>
                     </td>
                 </tr>
             {% endfor %}
@@ -37,11 +39,10 @@
     </table>
     </div>
     <div class='card'>
-    {% if noEliminado %}
-    <div>
-        <h3>No es posible borrar la combi ya que se encuentra asignado a una ruta</h3>
-    </div>
-    {% elif noModificado %}
+        <div id="mensaje">
+
+        </div>
+    {% if noModificado %}
     <div>
         <h3>No es posible modificar la combi ya que se encuentra asignado a un viaje</h3>
     </div>
