--- a/demo1/templates/demo1/listados/listado_insumo.html
+++ b/demo1/templates/demo1/listados/listado_insumo.html
@@ -1,10 +1,14 @@
 {% extends 'demo1/base.html' %}
-
+{% load static %}
 {% block content %}
 <div class="card">
     <h2>Listado de insumos</h2>  
 </div>
     <div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+    <script src="{% static 'js/nuevojavascript.js' %}"></script>
     <table class="tablalista" width=100% border="1">
         <tbody>
         {% if cantidad %}
@@ -19,10 +23,10 @@
                     <td>{{ i.nombre  }}</td>
                     <td>{{ i.tipo }}</td>
                     <td>{{ i.precio }}</td>
-                    <td>
-                        <a href="{% url 'eliminar_insumo' pk=i.pk%}">Eliminar</a></td>
-                    <td>
-                        <a href="{% url 'modificar_insumo' pk=i.pk%}">Modificar</a>
+                    <td align="center"> 
+                        <button onclick="confirmarEliminacion('{% url 'eliminar_insumo' pk=i.pk%}', 'Esta seguro que desea eliminar el insumo?' )" style="color: black;">Eliminar</button></td>
+                    <td align="center">
+                        <button><a href="{% url 'modificar_insumo' pk=i.pk%}" style="text-decoration:none; color: black;">Modificar</a></button>
                     </td>
                 </tr>
             {% endfor %}
@@ -32,11 +36,10 @@
         
     </tbody>
     </table>
-    {% if noSeElimina %}
-        <div>
-            <h3>No se puede eliminar el insumo seleccionado porque se encuentra en un viaje en curso o pendiente</h3>
-        </div>
-    {% elif noModificado %}
+    <div id="mensaje">
+
+    </div>
+    {% if noModificado %}
         <div>
             <h3>No se puede modificar el insumo seleccionado porque se encuentra en un viaje en curso o pendiente </h3>
         </div>
