--- a/demo1/templates/demo1/formulario_prueba.html
+++ b/demo1/templates/demo1/formulario_prueba.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="{% static 'css/demo1.css' %}">
     </head>
     <body>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 crossorigin="anonymous"></script>
@@ -19,7 +20,7 @@
                 <div class="row">
                     <form method="POST" id="form_creacion" action="{% url 'comprar_pasajes_usuario' pk=pk %}">
                         {% csrf_token %}
-                        {{ form.as_p}}
+                        {{ form.as_p}}                        
                         <button type="button"> 
                             <a href="">Confirmar compra</a>
                         </button>
