--- a/demo1/templates/demo1/base_home_chofer.html
+++ b/demo1/templates/demo1/base_home_chofer.html
@@ -5,8 +5,14 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/demo1.css' %}">
+       
     </head>
     <body>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
+        <script src="{% static 'js/nuevojavascript.js' %}"></script>
+
         <div class="page-header">
             {% if user.is_authenticated %}
                 <h1>Bienvenido Chofer al home de Combi19</h1>
