--- a/demo1/templates/demo1/home_usuario_chofer.html
+++ b/demo1/templates/demo1/home_usuario_chofer.html
@@ -11,6 +11,9 @@
    {%if enCurso%}
    <p>Viaje en Curso</p>
    {%endif%}
+   <div class="lista" >
+      <h3><a href="{% url 'viajes_proximos' %}">Viajes Proximos</a></h3>
+   </div>
 
    <li><a href="{% url 'iniciar_viaje' %}">iniciar viaje</a></li>
    <a href="{% url 'finalizar_viaje' %}" onclick="javascript:return asegurar();">Finalizar viaje</a>
