--- a/demo1/templates/demo1/listados/pasajeros_viajes_proximos.html
+++ b/demo1/templates/demo1/listados/pasajeros_viajes_proximos.html
@@ -34,7 +34,7 @@
                         <td>{{p.viaje.fecha}}</td>
                         <td>{{p.cantidad}}</td>
                         <td>{{p.costoTotal}}</td>
-                        <td align="center" width="180px"><button type="button" style="width: 90%;"><a href="" style="text-decoration:none; color: black;">Registrar Sintomas</a></button></td>
+                        <td align="center" width="180px"><button type="button" style="width: 90%;"><a href="{% url 'registrar_sintomas' pk=p.pk %}" style="text-decoration:none; color: black;">Registrar Sintomas</a></button></td>
                         <td align="center" width="100px"><button type="button" style="width: 90%;"><a href="" style="text-decoration:none; color: black;">Asistencia</a></button></td>
                     </tr>    
                     {% endfor%}
