--- a/demo1/templates/demo1/home_usuario_chofer.html
+++ b/demo1/templates/demo1/home_usuario_chofer.html
@@ -12,6 +12,7 @@
    <div class="card">
    <h2>Viaje en Curso</h2> &nbsp;&nbsp;&nbsp;&nbsp;
    <h3><a href="{% url 'finalizar_viaje' %}" onclick="javascript:return asegurar();">Finalizar viaje</a></h3></div>
+   <h3><a href="{% url 'vender_pasaje_en_curso' %}">Viajes Proximos</a></h3>
    {%endif%}
    
    <div class="lista" >
