correccion de detalles del listado viajes proximos y pasajeros

--- a/demo1/templates/demo1/listados/pasajeros_viajes_proximos.html
+++ b/demo1/templates/demo1/listados/pasajeros_viajes_proximos.html
@@ -47,7 +47,7 @@
             </table>
             {%else%}
                 <div>
-                    <p>No posee ningun pasaje en Pendientes</p>
+                    <p>No posee ningun pasajero en este viaje</p>
                 </div>
             {%endif%}
         </div>
