--- a/demo1/templates/demo1/listados/viajes_proximos.html
+++ b/demo1/templates/demo1/listados/viajes_proximos.html
@@ -15,7 +15,7 @@
             <table class="tablalista" width=100% border="1">
                 <tbody>
                     <tr>
-                        <td align="center" colspan="">Viajes</td>
+                        <td align="center" colspan="7">Viajes</td>
                     </tr>
                     <tr>
                         <td align="center">Origen</td>
@@ -40,7 +40,7 @@
             </table>
             {%else%}
                 <div>
-                    <p>No posee ningun pasaje en Pendientes</p>
+                    <p>No posee ningun viaje proximos</p>
                 </div>
             {%endif%}
             
