--- a/demo1/templates/demo1/listados/viajes_proximos.html
+++ b/demo1/templates/demo1/listados/viajes_proximos.html
@@ -21,7 +21,7 @@
                         <td align="center">Origen</td>
                         <td align="center">Destino</td>
                         <td align="center">Fecha y Hora de Viaje</td>
-                        <td align="center">Cant. de Pasajeros</td>
+                        <td align="center">Pasajeros Pendientes</td>
                         <td align="center">Combi</td>
                         <td align="center" colspan="2">Opcion</td>
                     </tr>
