--- a/demo1/templates/demo1/form/formulario_venta_en_curso.html
+++ b/demo1/templates/demo1/form/formulario_venta_en_curso.html
@@ -1,6 +1,9 @@
 {% extends 'demo1/base_venta_en_curso.html' %}
 
 {% block content %}
+<div class="post-form">
+    <h3>Solo se puede vender un pasaje</h3>
+</div>
     <form method="POST" class="post-form">
         {% csrf_token %}
         {{ form.as_p}}
@@ -22,7 +25,7 @@
     {% if fallido %}
         {% if cantidad_fallida %}
             <div>
-                <p>La cantidad ingresada debe ser inferior o igual a {{cantidad_pasajes}}</p>
+                <p>Lo siento no podemos efectuar la venta porque la combi ya no tiene mas asientos disponibles</p>
             </div>
         {% elif temperatura %}
             <div>
