--- a/demo1/templates/demo1/modificar/formulario_modificar_pasajero.html
+++ b/demo1/templates/demo1/modificar/formulario_modificar_pasajero.html
@@ -27,11 +27,11 @@
                     </div>
                 {% elif not mailUnico and not dniUnico %}
                             <div>
-                                <h3>No se han modificado los datos correctamente porque en mail y el dni ya existen</h3>
+                                <h3>No se han modificado los datos correctamente porque el mail y el dni ya existen</h3>
                             </div>
                 {% elif not mailUnico %}
                             <div>
-                                <h3>No se han modificado los datos correctamente porque en mail ya existe</h3>
+                                <h3>No se han modificado los datos correctamente porque el mail ya existe</h3>
                             </div>
                 {% elif not dniUnico %}
                             <div>
