--- a/demo1/templates/demo1/base_login.html
+++ b/demo1/templates/demo1/base_login.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="page-header" >
-            <h1>=Bienvenido a Combi19</h1>
+            <h1>Bienvenido a Combi19</h1>
         </div>
         <div>
             <div class="content container">
