--- a/demo1/templates/demo1/change_password.html
+++ b/demo1/templates/demo1/change_password.html
@@ -5,6 +5,14 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/demo1.css' %}">
+        <script>
+          function asegurar ()
+            {
+                rc = confirm("¿Está seguro que desea cambiar la contraseña?");
+                return rc;
+            }
+          </script>
+
     </head>
     <body>
       <div class = 'card' >
@@ -16,7 +24,8 @@
       {% csrf_token %}
       {{ form }}
     
-      <button type="submit">Guardar Cambios</button>
+      <button type="submit" onclick="javascript:return asegurar();">Guardar Cambios</button>
+     
     </form>
     
   </div>
